--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno Desarrollo ...
-configuracion.autor.nombre=Edwin Maravi
-configuracion.autor.email=emaravi@cjavaperu.com
+configuracion.autor.nombre=Felix Sueldo
+configuracion.autor.email=fsueldov@cjavaperu.com
