--- a/servicio-oauth.properties
+++ b/servicio-oauth.properties
@@ -1,2 +1,5 @@
 server.port=8006
 configuracion.texto=servicio oauth por defecto.
+config.security.oauth.client.id=frontendapp
+config.security.oauth.client.secret=12345
+config.security.oauth.jwt.key=algun_codigo_secreto_aeiou
