Se agrega archivos para servicio oauth.

--- a/servicio-zuul.properties
+++ b/servicio-zuul.properties
@@ -1,2 +1,5 @@
 server.port=8008
 configuracion.texto=servicio zuul por defecto.
+config.security.oauth.client.id=frontendapp
+config.security.oauth.client.secret=12345
+config.security.oauth.jwt.key=algun_codigo_secreto_aeiou
